[project]
name = "useful-py-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 79
extend-exclude = [
    '.git', 'feasibility_tests','kpi_calculator',
    '.venv', 'docker-config', 'depedencies', 'outputs', '.vscode'
]
fix-only = true
unsafe-fixes = true

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
extend-select = [
    'D', # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
quote-style = 'single'
